[gd_scene load_steps=9 format=2]

[ext_resource path="res://ticktacktoe.gd" type="Script" id=1]
[ext_resource path="res://block.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/grid.png" type="Texture" id=3]
[ext_resource path="res://custom_fonts/gameovercre1.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://reiniciar.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 526.204, 520.283 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 4 )

[node name="ticktacktoe" type="Node2D"]
script = ExtResource( 1 )

[node name="block" parent="." instance=ExtResource( 2 )]
position = Vector2( 97.6901, 167.316 )

[node name="block2" parent="." instance=ExtResource( 2 )]
position = Vector2( 238.165, 164.873 )
posicao = 1

[node name="block3" parent="." instance=ExtResource( 2 )]
position = Vector2( 375.409, 165.856 )
posicao = 2

[node name="block4" parent="." instance=ExtResource( 2 )]
position = Vector2( 99.9788, 306.047 )
posicao = 3

[node name="block5" parent="." instance=ExtResource( 2 )]
position = Vector2( 238.698, 307.038 )
posicao = 4

[node name="block6" parent="." instance=ExtResource( 2 )]
position = Vector2( 375.71, 305.507 )
posicao = 5

[node name="block7" parent="." instance=ExtResource( 2 )]
position = Vector2( 99.6696, 438.729 )
posicao = 6

[node name="block8" parent="." instance=ExtResource( 2 )]
position = Vector2( 238.685, 441.173 )
posicao = 7

[node name="block9" parent="." instance=ExtResource( 2 )]
position = Vector2( 374.745, 437.402 )
posicao = 8

[node name="grid" type="Area2D" parent="."]
position = Vector2( 245.934, 306.787 )
scale = Vector2( 0.38, 0.38 )

[node name="grid-image" type="Sprite" parent="grid"]
texture = ExtResource( 3 )
offset = Vector2( -10.5781, -5.28888 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="grid"]
position = Vector2( -27.8647, -10.7171 )
shape = SubResource( 1 )

[node name="narrador" type="Label" parent="."]
margin_left = 2.41663
margin_top = 536.413
margin_right = 479.767
margin_bottom = 605.413
custom_fonts/font = SubResource( 2 )
text = "Hello"
align = 1

[node name="reiniciar" type="Button" parent="."]
margin_left = 29.0
margin_top = 622.0
margin_right = 441.0
margin_bottom = 692.0
custom_fonts/font = SubResource( 3 )
text = "Reiniciar"
script = ExtResource( 5 )

[connection signal="mouse_entered" from="reiniciar" to="reiniciar" method="_on_reiniciar_mouse_entered"]
[connection signal="mouse_exited" from="reiniciar" to="reiniciar" method="_on_reiniciar_mouse_exited"]
